# desafio-03-dpt

./: .env_example  README.md  docker-compose.yml  pyproject.toml
notebook/: Analise_Exploratoria.ipynb
src/: main.py
src/utils/: cleaning.py  ddl.py  insert.py  modeling.py  models.py  processor.py  reading.py
